update: shortcode wrap option. bugfix sprites

--- a/admin/scss/rexlive/rexbuilder-live/views/_block.scss
+++ b/admin/scss/rexlive/rexbuilder-live/views/_block.scss
@@ -24,6 +24,11 @@
   .perfect-grid-item {
     overflow: visible;
   }
+  .grid-item-content{
+    &:active {
+      cursor: pointer;
+    }
+  }
 }
 
 .ui-focused-element-highlight {
