--- a/admin/scss/rexlive/rexbuilder-live/views/_builderL.scss
+++ b/admin/scss/rexlive/rexbuilder-live/views/_builderL.scss
@@ -159,10 +159,6 @@
   cursor: pointer;
 }
 
-.grid-item-content:active {
-  cursor: pointer;
-}
-
 .grid-item-content {
   width: 100%;
   height: 100%;
